src/yarn/snapshots/errors___yarn_version_detect_yarn_version_command_error.snap
---
source: buildpacks/nodejs-yarn/src/errors.rs
---
- Debug Info:
  - Command failed `yarn --version`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to determine Yarn version
!
! An unexpected error occurred while attempting to determine the current Yarn version from the system.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
